--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-
-
-
-
 <html>
-
 	<head>
 		<title>Accezz | Mobile Accezzories</title>
 		<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -22,21 +17,16 @@
 		<META NAME="REVISIT-AFTER" CONTENT="4 days">
 		<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 		<link href="css/accezz.css" rel="stylesheet" title="Accezz">
+		<style>
+		img.logo{ max-height: 100%; max-width: 100%; }
+		</style>
 	</head>
-
 <body bgcolor="#ffe500" background="images/accezz-bg.png" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" align="center">
-
-	<br>
-
-<img src="images/accezz.png" width=667 height=200 border="0">
-							<div class="header">
-								<br><br>COMING SOON
-							</div>
-
-							
+<br>
+<img class="logo" src="images/accezz.png" border="0">
+<div class="header">
+	<br><br>COMING SOON
+</div>							
 </div>
-
-
 </body>
-
 </html>
