Coming soon responsive fix

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<link href="css/accezz.css" rel="stylesheet" title="Accezz">
 		<style>
 		img.logo{ max-height: 100%; max-width: 100%; }
+		@media (max-width: 768px){
+			.header{ margin-top:40px; }
+		}
 		</style>
 	</head>
 <body bgcolor="#ffe500" background="images/accezz-bg.png" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" align="center">
